# arcgis-mcp-service

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
arcgis-mcp-service-main/: .gitignore  README.md
arcgis-mcp-service-main/.github/workflows/: ci.yml
arcgis-mcp-service-main/arcgis_pro_mcp/: da_read.py  gp_allowlist.py  gp_convert.py  gp_create.py  gp_generic.py  gp_network.py  gp_raster.py  metadata.py  server.py  workspace_listing.py
arcgis-pro-mcp/: README.md  pyproject.toml
arcgis-pro-mcp/arcgis_pro_mcp/: __init__.py  __main__.py  server.py
arcgis_pro_mcp/: __init__.py  __main__.py  da_read.py  da_write.py  gp_allowlist.py  gp_analysis.py  gp_generic.py  gp_schema.py  gp_write.py  paths.py  server.py  symbology.py  workspace_listing.py
skills/arcgis-pro-mcp/: SKILL.md
skills/arcgis-pro-mcp/agents/: openai.yaml
skills/arcgis-pro-mcp/references/: development.md  security-and-paths.md  tools.md
src/: arcgis-client.ts  config.ts  index.ts
tests/: test_gp_generic.py  test_paths.py  test_server.py
