[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arcgis-pro-mcp"
version = "0.8.0"
description = "MCP server for ArcGIS Pro using ArcPy (.aprx maps, layouts, layers)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.20",
]

[project.scripts]
arcgis-pro-mcp = "arcgis_pro_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["arcgis_pro_mcp"]
